--- a/Online Real Estate/Web.config
+++ b/Online Real Estate/Web.config
@@ -19,5 +19,10 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+  <connectionStrings>
+    <add name="RealEstate" connectionString="Data Source=LAPTOP-8VF3GIKH\SQLEXPRESS  Initial Catalog= RealEstate Integrated Security=SSIP" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
