--- a/Online Real Estate/Web.config
+++ b/Online Real Estate/Web.config
@@ -23,6 +23,6 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <connectionStrings>
-    <add name="RealEstate" connectionString="Data Source=LAPTOP-8VF3GIKH\SQLEXPRESS  Initial Catalog= RealEstate Integrated Security=SSIP" providerName="System.Data.SqlClient"/>
+    <add name="RealEstate" connectionString="Data Source=LAPTOP-8VF3GIKH\SQLEXPRESS;Initial Catalog= RealEstate;Integrated Security=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
